--- a/Frontend/src/pages/MemeListPage.module.css
+++ b/Frontend/src/pages/MemeListPage.module.css
@@ -9,9 +9,16 @@
   margin: 16px;
 }
 
-.notInputTxt {
-  margin: 5% 16px 10% 16px;
+.uploadMemeImg {
+  width: 100%;
+  height: 190px;
+  object-fit: cover;
 }
+
+
+/* .notInputTxt {
+  margin: 5% 16px 10% 16px;
+} */
 
 .searchArea {
   transition: 100ms;
