--- a/Frontend/src/components/meme/upload/MemeCheckBox.module.css
+++ b/Frontend/src/components/meme/upload/MemeCheckBox.module.css
@@ -1,19 +1,23 @@
-.checkboxWrapper{
-    font-size: 10px;
-    color: var(--disabled-gray-color);
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column;
+.checkboxWrapper {
+  font-size: 10px;
+  color: var(--disabled-gray-color);
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 16px;
 }
 
-.checkboxWrapper > div{
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
+.checkboxWrapper > p {
+  margin-top: 3%;
 }
 
-.checkbox{    
-    margin-left: 5%;
+.checkboxWrapper > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  margin-top: 3px;
 }
 
+.checkbox {
+  margin-left: 5%;
+}
