--- a/Frontend/src/components/meme/upload/MemeUploadBtn.module.css
+++ b/Frontend/src/components/meme/upload/MemeUploadBtn.module.css
@@ -9,6 +9,25 @@
     height: 44px;
 }
 
-.btnContainer:hover {
-    cursor: pointer;
+.submit{
+    width: 44px;
+    height: 44px;
+}
+
+.submitTrue {
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--navy-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.submitFalse {
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--disabled-gray-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
